--- a/index.html
+++ b/index.html
@@ -94,7 +94,23 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <h1>Hello world</h1>
-        <p>Hello</p>
+        <header class="header">
+            <div class="container">
+                <div class="header-top">
+                    <!-- Logo -->
+                    <a href="/">
+                        <div class="logo">
+                            <span class="logo__circle"></span>
+                            <span class="logo__text">
+                                <span class="logo__brand">Shine</span>
+                                <span class="logo__brand logo__brand--small">
+                                    Smile
+                                </span>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
